generic sqlstatements, doku

--- a/doku/design/data/data.tex
+++ b/doku/design/data/data.tex
@@ -47,7 +47,7 @@ verwendet. Damit ist eine einfache Portierbarkeit zwischen XML, Java, Python und
 
 \section{XML-Schema}
 Folgendes Skripting des XML-Schemas (\ref{req:Xm:schema}) zeigt den Aufbau der XML-Datei:
-\lstinputlisting[language=XML,basicstyle=\ttfamily\fontsize{8}{10}\selectfont]{../xml/file.xsd}
+\lstinputlisting[language=XML,basicstyle=\ttfamily\fontsize{8}{10}\selectfont]{../src/xml/file.xsd}
 \subsection{Metadaten}
 \ref{req:Xm:content:meta}
 Um die Metadaten kompakter und besser lesbar zu gestalten, 
@@ -67,7 +67,7 @@ Dabei ist auch das XSD-Schema entsprechend dem auskommentierten Template zu erwe
 Der Name des umschließenden Elements muss dabei einmalig sein.
 
 Folgendes Listing zeigt ein Beispiel XML mit leerem data-Knoten:
-\lstinputlisting[language=XML,basicstyle=\ttfamily\fontsize{8}{10}\selectfont]{../xml/example.xml}
+\lstinputlisting[language=XML,basicstyle=\ttfamily\fontsize{8}{10}\selectfont]{../src/xml/example.xml}
 
 \section{Klassen} \label{design:data:classes}
 Diagramm \ref{dia:design:frontend:data:classes} zeigt die Umsetzung des Modells in Klassen.
