--- a/doku/design/misc/guidelines.tex
+++ b/doku/design/misc/guidelines.tex
@@ -37,9 +37,8 @@ eine für das Python Backend (\ciii, \flo, \ci) und eine für den Java Frontend
 \subsection{Java}
 	\input{design/misc/javaguide.tex}
 
-\subsection{Tests}
-    Innerhalb der Untergruppen werden die Module gegenseitig getestet um das Risiko von ,,Denkfehlern'' zu minimieren
-\end{description}
+%\subsection{Tests}
+%    Innerhalb der Untergruppen werden die Module gegenseitig getestet um das Risiko von ,,Denkfehlern'' zu minimieren
 
 
 % section systemkomponenten (end)
