--- a/doku/dokumentation.tex
+++ b/doku/dokumentation.tex
@@ -78,6 +78,7 @@ Beteiligte Studenten: \\
 \input{./spec/spec03-requirements.tex}
 \input{./spec/spec04-development.tex}
 \part{Entwurf}
+\input{./design/preview.tex}
 \input{./design/misc/guidelines.tex}
 \input{./design/data/data.tex}
 \input{./design/backend/backend.tex}
