--- a/doku/spec/spec04-development.tex
+++ b/doku/spec/spec04-development.tex
@@ -16,7 +16,7 @@
 		Hierzu ist Java besonders geeignet und es ist gewährleistet, 
 		eine an der Hochschule Hof allgemein verständliche Schnittstelle zu schaffen.
 \section{Dokumentation}
-	Die Dokumentation wird in \LaTeX als ein fortlaufendes Gesamtdokument erstellt, 
+	Die Dokumentation wird in \LaTeX\ als ein fortlaufendes Gesamtdokument erstellt, 
 	welches je nach Phase um weitere Teile erweitert wird.
 \section{Teamsynchronisation}
 	Dokumente und Quellcode werden über ein gemeinsames Repository auf github.com synchronisiert.
