--- a/doku/design/misc/javaguide.tex
+++ b/doku/design/misc/javaguide.tex
@@ -99,5 +99,6 @@
 		Nur erforderlich bei komplexen Codeabschnitten deren Sinn nicht
 		unmittelbar erkennbar ist, z.B. bei optiemierten Code.
 \end{description}
+\end{description}
   	  	 
 
