--- a/doku/design/backend/backend.tex
+++ b/doku/design/backend/backend.tex
@@ -53,7 +53,7 @@ Verantwortlich: \flo
 \paragraph{Ablauf:}
 \label{par:ablauf_}
 Grundlegender Ablauf beim Lesen von Configwerten:
-\begin{figure}[H]
+\begin{figure}[!H]
 	\centering
 	\label{dia:design:backend:overview}
 	\includegraphics[width=1.2\textwidth]{design/backend/gfx/getting_value.eps}
@@ -333,7 +333,7 @@ Verantwortlich: \ci
 \paragraph{Beschreibung:}
 \label{par:beschreibung_}
 Der Cleaner bereinigt die Verzeichnisstruktur indem er leere Ordner und Dateien löscht.
-Des weiteren wird folgende Restrukturierung durchgeführt:
+Des weiteren wird folgende Restrukturierung durchgeführt (von oben gezeigter Struktur):
 \begin{verbatim}
     www.heise.de/ 
         index.html/
@@ -374,7 +374,7 @@ Entsprechend:
 \hfill
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.5\textwidth]{design/backend/gfx/cleaner.eps}
+	\includegraphics[width=1.5\textwidth]{design/backend/gfx/cleaner.eps}
 	\caption{Cleaner Prozedur}
 \end{figure}
 \paragraph{Schnittstelle:} 
@@ -518,7 +518,7 @@ Ist die Datenbank noch nicht vorhanden so wird sie neu erstellt (siehe: \ref{req
 \hfill
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.5\textwidth]{design/backend/gfx/dbupdate.eps}
+	\includegraphics[width=1.5\textwidth]{design/backend/gfx/dbupdate.eps}
 	\caption{DB Update Prozedur}
 \end{figure}
 
