--- a/doku/design/frontend/frontend.tex
+++ b/doku/design/frontend/frontend.tex
@@ -227,7 +227,7 @@ Es wird auf Serverseite eine Liste von File-Objekten erzeugt und an den Client g
 Diese kann einfach an den Analyzer zurückgegeben werden.
 
 \section {Client Notifier}
-\liable{\sab}
+\label{\sab}
 
 Zum benachrichtigen über Neuerungen des Webarchivs für die Observer (Clients) wird ein Notifier eingesetzt.
 
@@ -247,13 +247,13 @@ Ist das der Fall, startet die Benachrichtigungsroutine. Sobald diese beendet ist
 Wird die Benachrichtigungsroutine mit dem Datum der letzten Suche gestartet wird, macht diese eine Anfrage bei der Datenbank. Als Antwort er hält sie eine Liste Commit-Tags, welche anschließend an alle Clients gesendet wird. 
 
 \section{Log}
-\liable{\sab}
+\label{\sab}
 Zum loggen von möglichen Fehler verwenden wir das Paket ,,java.util.logging'' von Java.
 
 \section{Klassen und Komponenten}
 
 \subsection{Server und Client}
-\liable{\eddy}
+\label{\eddy}
 \begin{figure}[H]
 	\centering
 	\label{dia:design:frontend:classes:svcl}
@@ -262,7 +262,7 @@ Zum loggen von möglichen Fehler verwenden wir das Paket ,,java.util.logging'' v
 \end{figure}
 
 \subsection{Messagedaten-Klassen}
-\liable{\eddy}
+\label{\eddy}
 
 \begin{figure}[H]
 	\centering
@@ -272,7 +272,7 @@ Zum loggen von möglichen Fehler verwenden wir das Paket ,,java.util.logging'' v
 \end{figure}
 
 \subsection{Message-Klassen}
-\liable{\eddy}
+\label{\eddy}
 
 \begin{figure}[H]
 	\centering
@@ -282,7 +282,7 @@ Zum loggen von möglichen Fehler verwenden wir das Paket ,,java.util.logging'' v
 \end{figure}
 
 \subsection{Notifier-Klassen}
-\liable{\sab}
+\label{\sab}
 
 \begin{figure}[H]
 	\centering
@@ -292,9 +292,9 @@ Zum loggen von möglichen Fehler verwenden wir das Paket ,,java.util.logging'' v
 \end{figure}
 
 \subsection{xmlaccess-Klassen}
-\liable{\cii}
+\label{\cii}
 \subsection{dbaccess-Klassen}
-\liable{\cii}
+\label{\cii}
 
 \begin{figure}[H]
 	\centering
@@ -324,7 +324,7 @@ Die dbaccess-Klassen gliedern sich in die folgenden Teile:
 
 \ref{req:Sv:comm}
 \section{Test Analysetool} 
-\liable{\sab} 
+\label{\sab} 
 \ref{req:Cl:testanalyzer} \\
 	Das Analysetool wird als einfach Klasse mit main()-funktion implementiert.
 	Die Funktion hat den folgenden Ablauf.
