--- a/doku/dokumentation.tex
+++ b/doku/dokumentation.tex
@@ -83,5 +83,8 @@ Beteiligte Studenten: \\
 \input{./design/data/data.tex}
 \input{./design/backend/backend.tex}
 \input{./design/frontend/frontend.tex}
+\part{Implementierung}
+\input{./impl/start.tex}
+\input{./impl/test.tex}
 \end{document}
 
