--- a/doku/dokumentation.tex
+++ b/doku/dokumentation.tex
@@ -85,6 +85,6 @@ Beteiligte Studenten: \\
 \input{./design/frontend/frontend.tex}
 \part{Implementierung}
 \input{./impl/start.tex}
-\input{./impl/test.tex}
+\input{./impl/frontend.tex}
 \end{document}
 
